--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,6 +31,7 @@ layout: default
         {%- endif -%}
       {%- endfor -%}
     </ul>
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
