--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,10 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Recent posts" }}</h2>
+    <h2 class="post-list-heading">{{ page.list_title | default: "Recent posts" }}
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          {{ post.title | escape }}{{ '(' }}{{ post.date | date: date_format }}{{ ')' }}
+    </h2>
     <ul class="post-list">
       {% increment num -%}
       {%- for post in site.posts -%}
@@ -22,8 +25,6 @@ layout: default
               <a class="post-link" href="{{ post.url | relative_url }}">
               </a>
             </h3>
-            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-            {{ post.title | escape }}{{ '(' }}{{ post.date | date: date_format }}{{ ')' }}
             {%- if site.show_excerpts -%}
             {{ post.excerpt }}
             {%- endif -%}
