--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -11,8 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Recent posts" }}
-    </h2>
+    <h2 class="post-list-heading">{{ page.list_title | default: "Recent posts" }}</h2>
     <ul class="post-list">
       {% increment num -%}
       {%- for post in site.posts -%}
@@ -21,16 +19,18 @@ layout: default
           <li>
             <h3>
               <a class="post-link" href="{{ post.url | relative_url }}">
+                {{ post.title | escape }}
               </a>
             </h3>
             {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
+              {{ post.excerpt }}
             {%- endif -%}
+            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+            <span class="post-meta">{{ post.date | date: date_format }}</span>
           </li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ post.title | escape }}{{ '(' }}{{ post.date | date: date_format }}{{ ')' }}  
         {%- endif -%}
       {%- endfor -%}
     </ul>
   {%- endif -%}
+
 </div>
